# UR10E

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gazebo_ros2_control/include/gazebo_ros2_control/: gazebo_ros2_control_plugin.hpp  gazebo_system.hpp  gazebo_system_interface.hpp
install/gazebo_ros2_control/share/gazebo_ros2_control/: gazebo_hardware_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
onrobot_2fg7/: CMakeLists.txt  package.xml
onrobot_2fg7/launch/: display.launch.py
onrobot_2fg7/urdf/: 2fg7.urdf
src/ur10e_2fg7_description/: CMakeLists.txt  package.xml
src/ur10e_2fg7_description/config/: controllers.yaml  initial_positions.yaml
src/ur10e_2fg7_description/launch/: ur10e_2fg7_gazebo.launch.py
src/ur10e_2fg7_description/urdf/: ur10e_2fg7.urdf.xacro  view_ur10e_2fg7.launch.py
src/ur10e_2fg7_description/worlds/: empty.world
src/ur10e_2fg7_moveit_config2/: .setup_assistant  CMakeLists.txt  package.xml
src/ur10e_2fg7_moveit_config2/config/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml  ur10e_2fg7.ros2_control.xacro  ur10e_2fg7.srdf  ur10e_2fg7.urdf.xacro
src/ur10e_2fg7_moveit_config2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur10e_2fg7_description/: CMakeLists.txt  package.xml
ur10e_2fg7_description/config/: bridge_config.yaml  controllers.yaml  view_robot.rviz
ur10e_2fg7_description/launch/: ur10e_2fg7_gazebo.launch.py  view_ur10e_2fg7.launch.py
ur10e_2fg7_description/urdf/: gazebo.xacro  ur10e_2fg7.urdf.xacro
ur10e_2fg7_description/worlds/: empty.world
(+719 files in other folders)
